--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  overflow: visible;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -30,4 +31,27 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.bg-pattern {
+  width: 100vw;
+  height: 100vh;
+  overflow: visible;
+
+  /* Pattern Settings */
+  --s: 20px; /* Control the size */
+  --c: #0000, #282828 0.5deg 119.5deg, #0000 120deg;
+  --g1: conic-gradient(from 60deg at 56.25% calc(425% / 6), var(--c));
+  --g2: conic-gradient(from 180deg at 43.75% calc(425% / 6), var(--c));
+  --g3: conic-gradient(from -60deg at 50% calc(175% / 12), var(--c));
+
+  /* Background Pattern */
+  background: var(--g1), var(--g1) var(--s) calc(1.73 * var(--s)), var(--g2),
+    var(--g2) var(--s) calc(1.73 * var(--s)), var(--g3) var(--s) 0,
+    var(--g3) 0 calc(1.73 * var(--s)) #1e1e1e;
+  background-size: calc(2 * var(--s)) calc(3.46 * var(--s));
+  background-repeat: repeat;
+  background-position: center;
+
+  scroll-behavior: smooth;
 }
